# streamlit

./: .gitignore  README.md  bank_master.xlsx  pyproject.toml  requirements.txt
src/: app.py
src/streamlit/: __init__.py
